# multi-agent-orchestrator

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
services/orchestrator/: Dockerfile  main.py
services/router/: Dockerfile  main.py
shared/: __init__.py  models.py
