[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.4",
    "redis>=6.4.0",
    "uvicorn>=0.35.0",
]
